include $(top_srcdir)/build/top.mk
## Process this file with automake to produce Makefile.in

SUBDIRS = libmbutil libmbmath libobjs liby12 libcolamd libnaive libmbwrap 

#libbost is (for now) in EXTRA_DIST; we will have to move it here
#when we will add some component that actually need to be built 

include $(top_srcdir)/build/bot.mk
